Refactor product management and security configuration
- Updated SecurityConfig to enhance security settings and request matchers.
- Refactored AbstractController to improve response handling with new ApiDataResponse structure.
- Renamed methods in ProductController for clarity and consistency.
- Modified Product and ProductDTO classes to include validation annotations and additional fields.
- Updated ProductService interface and implementation to streamline product operations and remove unnecessary caching.
- Enhanced unit tests for ProductService to reflect method name changes and ensure comprehensive coverage.